adjusting controller parameters, correcting models

--- a/ProductService.Api/appsettings.json
+++ b/ProductService.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Host=product;Port=5432;Database=product;Username=postgres;Password=postgres"
+    "default": "Host=localhost;Port=5432;Database=product;Username=postgres;Password=2018"
   }
 }
