--- a/ProductService.Logic/ProductService.Logic.csproj
+++ b/ProductService.Logic/ProductService.Logic.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>ProductService.Logic</RootNamespace>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
